Fix vertical alignments

--- a/sass/blocks/btn.scss
+++ b/sass/blocks/btn.scss
@@ -1,6 +1,6 @@
 .btn {
-  width: 280px;
-  height: 60px;
+  min-width: 280px;
+  padding: 20px 0;
   background-color: $primary-color;
   text-align: center;
   font-size: 21px;
