--- a/sass/blocks/main-nav.scss
+++ b/sass/blocks/main-nav.scss
@@ -1,6 +1,7 @@
 .main-nav {
   text-transform: uppercase;
   position: relative;
+  margin-bottom: 57px;
 }
 
 .main-nav__logo {
@@ -14,14 +15,6 @@
   z-index: 1;
 }
 
-.main-nav__toggle-close {
-  height: 25px;
-  width: 25px;
-  position: absolute;
-  right: 20px;
-  top: 17px;
-}
-
 .main-nav__items {
   list-style-type: none;
   padding: 0;
@@ -33,7 +26,7 @@
   text-align: center;
   padding: 20px 0;
   border-top: 1px solid #9ac2db;
-  border-bottom: 1px solid #81b3d2;
+  border-bottom: 1px solid #678fa8;
 }
 
 .main-nav__item:first-child {
@@ -54,5 +47,19 @@
 .main-nav__toggle-open {
   border: 0;
   background-color: $white-color;
+  position: absolute;
+  width: 23px;
+  height: 21px;
+  bottom: -39px;
+  right: 22px;
+
+}
+
+.main-nav__toggle-close {
+  height: 25px;
+  width: 25px;
+  position: absolute;
+  right: 20px;
+  top: 17px;
 }
 
