--- a/sass/blocks/page-footer.scss
+++ b/sass/blocks/page-footer.scss
@@ -11,3 +11,7 @@
   text-align: center;
   margin-bottom: 43px;
 }
+
+.page-footer__social-icons-wrapper {
+  margin-bottom: 40px;
+}
