--- a/sass/blocks/social.scss
+++ b/sass/blocks/social.scss
@@ -9,20 +9,30 @@
   background-color: $primary-color;
   margin-right: 6px;
   display: inline-block;
-  text-align: center;
+  vertical-align: top;
+  position: relative;
 }
 
-.social__item:nth-child(1) img {
+.social__item img {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  margin: auto;
+}
+
+.social__item--tw img {
   height: 15px;
   width: 20px;
 }
 
-.social__item:nth-child(2) img {
+.social__item--fb img {
   height: 18px;
   width: 9px;
 }
 
-.social__item:nth-child(3) img {
+.social__item--yt img {
   height: 14px;
   width: 22px;
 }
